--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "rest-express",
+  "name": "ethiopian-const-reg",
   "version": "1.0.0",
   "type": "module",
   "license": "MIT",
   "scripts": {
-    "dev": "tsx server/index.ts",
-    "build": "vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
-    "start": "NODE_ENV=production node dist/index.js",
+    "dev": "NODE_ENV=development tsx watch server/index.ts",
+    "build": "tsc && npm run copy-env",
+    "copy-env": "cp .env build/",
+    "start": "NODE_ENV=production node build/index.js",
     "check": "tsc",
     "db:push": "drizzle-kit push"
   },
@@ -89,11 +90,12 @@
     "@types/ws": "^8.5.13",
     "@vitejs/plugin-react": "^4.3.2",
     "autoprefixer": "^10.4.20",
+    "dotenv": "^16.5.0",
     "drizzle-kit": "^0.30.4",
     "esbuild": "^0.25.0",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.14",
-    "tsx": "^4.19.1",
+    "tsx": "^4.19.3",
     "typescript": "5.6.3",
     "vite": "^5.4.14"
   },
