--- a/render.yaml
+++ b/render.yaml
@@ -1,6 +1,7 @@
 services:
   - type: web
     name: ethiopian-const-registration
+    region: oregon  # REQUIRED FIELD ADDED
     runtime: node
     buildCommand:
       - npm install
@@ -8,6 +9,6 @@ services:
     startCommand: npm start
     envVars:
       - key: DATABASE_URL
-        value: postgresql://neondb_owner:npg_JPQN7Mghr2Cn@ep-yellow-recipe-a5v6bil0-pooler.us-east-2.aws.neon.tech/ethiopina_construction_reg?sslmode=require
+        value: "postgresql://neondb_owner:npg_JPQN7Mghr2Cn@ep-yellow-recipe-a5v6bil0-pooler.us-east-2.aws.neon.tech/ethiopina_construction_reg?sslmode=require"  # QUOTES ADDED
       - key: NODE_ENV
         value: production
