Fix: updated render.yaml format

--- a/render.yaml
+++ b/render.yaml
@@ -2,6 +2,7 @@ services:
   - type: web
     name: ethiopian-const-registration
     region: oregon
+    plan: free
     runtime: node
     buildCommand: |
       npm install
