--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "NODE_ENV=development tsx watch server/index.ts",
     "build": "tsc && npm run copy-env",
-    "copy-env": "cp .env build/",
+    "copy-env": "cp .env build/ || true",
     "start": "NODE_ENV=production node build/index.js",
     "check": "tsc",
     "db:push": "drizzle-kit push"
