--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "NODE_ENV=development tsx watch server/index.ts",
     "build": "tsc && npm run copy-env",
     "copy-env": "cp .env build/ || true",
-    "start": "NODE_ENV=production node build/index.js",
+    "start": "NODE_ENV=production node build/server/index.js",
     "check": "tsc",
     "db:push": "drizzle-kit push"
   },
