--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,24 +1,44 @@
+// {
+//   "include": ["client/src/**/*", "shared/**/*", "server/**/*"],
+//   "exclude": ["node_modules", "build", "dist", "**/*.test.ts"],
+//   "compilerOptions": {
+//     "outDir": "build",
+//     "incremental": true,
+//     "tsBuildInfoFile": "./node_modules/typescript/tsbuildinfo",
+//     "noEmit": true,
+//     "module": "ESNext",
+//     "strict": true,
+//     "lib": ["esnext", "dom", "dom.iterable"],
+//     "jsx": "preserve",
+//     "esModuleInterop": true,
+//     "skipLibCheck": true,
+//     "allowImportingTsExtensions": true,
+//     "moduleResolution": "bundler",
+//     "baseUrl": ".",
+//     "types": ["node"],
+//     "paths": {
+//       "@/*": ["./client/src/*"],
+//       "@shared/*": ["./shared/*"]
+//     }
+//   }
+// }
+
 {
-  "include": ["client/src/**/*", "shared/**/*", "server/**/*"],
-  "exclude": ["node_modules", "build", "dist", "**/*.test.ts"],
   "compilerOptions": {
     "outDir": "build",
-    "incremental": true,
-    "tsBuildInfoFile": "./node_modules/typescript/tsbuildinfo",
-    "noEmit": true,
+    "rootDir": "./",
     "module": "ESNext",
-    "strict": true,
-    "lib": ["esnext", "dom", "dom.iterable"],
-    "jsx": "preserve",
+    "target": "ES2020",
+    "moduleResolution": "node",
     "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
     "skipLibCheck": true,
-    "allowImportingTsExtensions": true,
-    "moduleResolution": "bundler",
-    "baseUrl": ".",
-    "types": ["node"],
+    "strict": true,
+    "baseUrl": ".",                       
     "paths": {
-      "@/*": ["./client/src/*"],
-      "@shared/*": ["./shared/*"]
+      "@shared/*": ["shared/*"]          
     }
-  }
+  },
+  "include": ["server", "shared"]
 }
+
